--- a/package.json
+++ b/package.json
@@ -28,22 +28,24 @@
     "start": "node example.js"
   },
   "devDependencies": {
-    "@jest/globals": "^29.5.0",
-    "@swc/core": "^1.3.66",
+    "@types/node": "^20.4.2",
+    "@jest/globals": "^29.6.1",
+    "@swc/core": "^1.3.69",
     "@swc/jest": "^0.2.26",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0",
-    "eslint": "^8.43.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-markdown": "^3.0.0",
-    "jest": "^29.5.0",
+    "jest": "^29.6.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.8",
-    "typescript": "^5.1.3"
+    "prettier": "^3.0.0",
+    "typescript": "^5.1.6"
   },
   "peerDependencies": {
-    "state-guard": "^4.0.0"
+    "state-guard": "^4.0.0",
+    "zod": "^3.21.4"
   },
   "wallaby": {
     "env": {
